2006-07-25  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicInternalFrameUI.java
	(GlassPaneDispatcher.dragTarget): New field.
	(GlassPaneDispatcher.isDragging): New field.
	(GlassPaneDispatcher.pressedComponent): Removed field.
	(GlassPaneDispatcher.tempComponent): Removed field.
	(GlassPaneDispatcher.pressCount): Removed field.
	(GlassPaneDispatcher.mousePressed): Call
	borderListener.mousePressed() to activate the frame.
	(acquireComponentForMouseEvent): Removed method.
	(handleEvent): Rewritten.
	(redispatch): New method.
	(InternalFramePropertyChangeListener.propertyChange):
	Make glasspane invisible when frame is selected, and visible
	if it gets deselected.
	
2006-07-25  Roman Kennke  <kennke@aicas.com>

	* java/awt/LightweightDispatcher.java
	(handleMouseEvent): Dispatch event to real target if
	the dragTarget has become invisible in the meantime.

2006-07-25  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/text/TabSet.java
	(equals): New method override for 1.5,
	(hashCode): Likewise,
	(toString): Added spaces to match reference implementation.

2006-07-24  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/IntrospectionException.java,
	* javax/management/MBeanAttributeInfo.java:
	New files.
	* javax/management/MBeanNotificationInfo.java:
	Documentation cleanups.
	
2006-07-24  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/text/TabSet.java
	(TabSet): Check for null argument,
	(getTab): Throw IllegalArgumentException for index out of bounds,
	(getTabIndexAfter): Changed test to '<=',
	and updated API docs all over,
	* javax/swing/text/TabStop.java: Updated API docs.

2006-07-24  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/text/TabStop.java
	(toString): Don't use 'left ' prefix, and added space between tab
	location and '(w/leader)' suffix.

2006-07-24  Francis Kung  <fkung@redhat.com>

	* javax/swing/JComboBox.java
	(DefaultKeySelectionManager): Implemented.